--- a/back/build.gradle
+++ b/back/build.gradle
@@ -29,7 +29,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    testImplementation 'junit:junit:4.13.1'// Jdbc, Driver
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	testImplementation 'junit:junit:4.13.1'// Jdbc, Driver
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
