--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
+# secret key
+jwt.valid.key=secretkeyusinginauthenticationprovider1234567890helloworld
