--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/bring;
+    url: jdbc:h2:tcp://localhost/~/bring;mode=mysql
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -16,4 +16,4 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug
-    org.hibernate.orm.jdbc.bind: trace # ????? ?? ??
+    org.hibernate.orm.jdbc.bind: trace
