--- a/back/build.gradle
+++ b/back/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.poi/poi
     implementation group: 'org.apache.poi', name: 'poi', version: '5.0.0'
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.0.0'
+
+    implementation 'org.json:json:20190722'
 }
 
 tasks.named('test') {
