--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/bring;
+    url: jdbc:h2:tcp://localhost/~/bring;MODE=MySQL
     username: sa
     password:
     driver-class-name: org.h2.Driver
